# mvideo_parser

./: .gitignore  Dockerfile  docker-compose.yaml  env_example  pyproject.toml
parser/: app.py  demo.py  mvideo_parser.py  settings.py  telegram_messages.py  url_params.py
