[tool.poetry]
name = "mvideo_parser"
version = "0.1.0"
description = ""
authors = ["fedotovdmitriy14"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
schedule = "^1.1.0"
pyTelegramBotAPI = "^4.6.0"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
